2014-01-19 Niels Grewe <niels.grewe@halbordnung.de>

	* Source/DKInterface.m
	* Source/DKBoxingUtils.m
	* Source/DKPort.m:
	A few consistency fixes for loop iterator varaibles
	(Patch by Marcus Müller)

2014-01-29 Niels Grewe <niels.grewe@halbordnung.de>

	* Source/DKBoxingUtils.m
	* Source/DKNotificationCenter.m
	* Headers/DKCommon.h
	* GNUmakefile:

	Fixes for various build problems. (Reported by Marcus Müller)

2014-01-29 Niels Grewe <niels.grewe@halbordnung.de>

	* Source/DKMethod.m: Fix off-by-one error when unmarshalling
	multiple return values.

2014-01-29 Niels Grewe <niels.grewe@halbordnung.de>

	* Documentation/UsingDBus.texi: Document how
	we pass along multiple return values from
	D-Bus methods.

2014-01-15 Niels Grewe <niels.grewe@halbordnung.de>
	* Headers/DKNumber.h
	* Source/DKNumber.m
	* Source/DKNumberTemplate.h:
	Implement NSNumber subclasses that behave predictably
	on D-Bus, because with variant-typed arguments, the
	other side might have assumptions about their size
	that it didn't tell us about, so we can't rely on them
	to translate properly.
	* Headers/DKVariant.h
	* Source/DKVariant.m:
	Proxy class to explicitly mark objects as to be
	passed inside a variant.
	* Source/DKArgument.m: Modify argument passing logic
	to properly recognise explicitly typed numbers, booleans
	and variants.
	* Headers/DBusKit.h
	* Documentation/GNUmakefile
	* Source/GNUmakefile:
	Connect new classes to the build.
	* Bundles/DBusMenu/DKMenuProxy.h
	* Bundles/DBusMenu/DKMenuProxy.m:
	Fix D-Bus menu implementation to pass arguments in the
	proper size.

2014-01-14 Niels Grewe <niels.grewe@halbordnung.de>
	* Headers/DKNotificationCenter.h
	* Source/DKNotificationCenter.m
	* Source/DKSignal.h
	* Source/DKSignal.m
	* Source/DKSignalEmission.h
	* Source/DKSignalEmission.m
	* Source/GNUmakefile:
	Finish support sending notifications to D-Bus.
	* Source/DKPort.m:
	If a port is local, cache it and always return
	the shared instance. This not only improves performane,